fix: overflow auto on tasks card

--- a/src/containers/Roadmap/components/TeamRoadmapCard/TeamRoadmapCard.scss
+++ b/src/containers/Roadmap/components/TeamRoadmapCard/TeamRoadmapCard.scss
@@ -42,7 +42,7 @@
 
   &__content {
     max-height: 480px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     &::-webkit-scrollbar-track {
       display: none;
